# origin

ALGOCPP-16/HomeWork(DFS)/: HomeWork(DFS).sln  HomeWork(DFS).vcxproj  main.cpp
ALGOCPP-16/HomeWork(DFSnew)/: HomeWork(DFSnew).sln  HomeWork(DFSnew).vcxproj  main.cpp
ALGOCPP-16/HomeWork(graf)/: HomeWork(graf).sln  HomeWork(graf).vcxproj  main.cpp
ALGOCPP-16/WEBINARList/: WEBINARList.sln  WEBINARList.vcxproj  main.cpp
CMakeDemo/: CMakeLists.txt  source.cpp
DATABASE/libpqxxCM/: CMakeLists.txt  main.cpp
Lesson1/HomeWork2.1.1/: HomeWork2.1.1.sln  HomeWork2.1.1.vcxproj  main.cpp
Lesson1/Homework1.1/: HomeWork1.1.sln  HomeWork1.1.vcxproj  main.cpp
Lesson1/Homework2.1.2/: HomeWork2.1.2.sln  HomeWork2.1.2.vcxproj  main.cpp
Lesson1/Homework2.1.3/: HomeWork2.1.3.sln  HomeWork2.1.3.vcxproj  main.cpp
Lesson10/HomeWork4.1/: HomeWork4.1.sln  HomeWork4.1.vcxproj  main.cpp
Lesson11/HomeWork5.2/: HomeWork5.2.sln  HomeWork5.2.vcxproj  main.cpp
Lesson11/Homework5.1/: Homework5.1.sln  Homework5.1.vcxproj  main.cpp
Lesson11/Project1/: Project1.sln  Project1.vcxproj
Lesson12/HomeWork6.1/: HomeWork6.1.sln  HomeWork6.1.vcxproj  (+1 more)
ParcerINI/: ParcerClassINI.cpp  ParcerClassINI.h  ParcerINI.sln  ParcerINI.vcxproj  main.cpp  test.ini
ProjectWebinar(FUNC)/: ProjectWebinar(FUNC).sln  ProjectWebinar(FUNC).vcxproj  main.cpp
Racing simulator/: Racing simulator.sln  Racing simulator.vcxproj  main.cpp
test_factorial/: CMakeLists.txt  main.cpp
БД/: .$HomeWork2.1(draw.io).png.dtmp  MSscript.txt  SELECTtest2(MS).sql  SELECTtest3(MS).sql  ScriptINSERT.sql  ScriptMS.sql
(+677 files in other folders)
